--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -36,7 +36,7 @@ theme:
   language: zh
   include_search_page: false
   search_index_only: true
-  custom_dir: overrides
+  # custom_dir: overrides
 
 # Additional configuration
 extra:
