Modified `mkdocs.yml` and `CNAME`.
- Modified `mkdocs.yml` and `CNAME`.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -2,7 +2,7 @@
 site_name: 托马斯·桑卡拉：论布基纳法索的革命
 site_description: "Thomas Sankara Speaks: The Burkina Faso Revolution"
 site_author: zhanziyuan
-site_url: https://zhanziyuan.github.io/thomassankara/
+site_url: https://dreammap.org/ThomasSankara/
 
 # Repository
 repo_name: ThomasSankara
